--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Product Store</title>
+    <style>
+        #products-container {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+            padding: 20px;
+            border: 1px solid black;
+            padding: 15px;
+        }
+        
+    </style>
 </head>
 <body>
+    <h1>Product Store</h1>
+    <div id="products-container" >
+        <p>Loading products...</p>
+    </div>
     
+    <script src="Script.js"></script>
 </body>
 </html>
