added search button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </style>
 </head>
 <body>
+    <input type="search" id="search">
+    <button id="sbtn">search</button>
     <h1>Product Store</h1>
     <div id="products-container" >
         <p>Loading products...</p>
