--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <div id="search-container">
             <input type="search" id="search" placeholder="Search products...">
             <button id="sbtn">Search</button>
+            <button id="viewHistory">View History</button>
+            <button id="viewAll">View All Products</button>
         </div>
         <h1>Product Store</h1>
         <div id="products-container">
